data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1931.wast
;; 2. **Test Description**:    - **Constraint Checked**: Empty value stack on conditional branch.    - **Details**: Implement a `br_table` where the operand stack is empty when the `br_if` condition is evaluated. Check for errors due to insufficient stack values.    - **Relation to Edge Case**: Tests the requirement for non-empty stacks at the point of conditional branch evaluation, validating `EmptyValueStackExpecting` error in `wizard_engine`.

(assert_invalid
  (module (func $empty-stack-br_if
    (block (result i32)
      (i32.const 0)
      (br_if 0)
    )
  ))
  "empty stack"
)